Adding a softer look to the webpage

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         .title {
             padding-top: 1rem;
         }
+        
+        body {
+            background-color: #ccc;
+            color: #222222;
+        }
 
     </style>
 </head>
